fix css todo-header marign right gap

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 :root {
-    --clr-primary: #8BD7D2
+    --clr-primary: #f4f4ee;
    
-    --clr-light: #f4f4f4
+    --clr-light: #aaa6a6;
     --clr-dark: #333;
     --clr-warning: rgb(99, 36, 36);
 }
@@ -36,6 +36,7 @@ body {
 }
 .all-tasks {
     grid-area: lists;
+    color: var(--clr-dark);
 }
 .task-list {
     font-size: 1.2rem;
@@ -130,11 +131,14 @@ form {
     grid-area: active;
     background: var(--clr-light);
     color: var(--clr-dark);
+    border-radius: 20px;
 }
 .todo-header {
     padding: var(--spacer);
     background: #e4e4e4;
-    margin-right: 1em;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    /* margin-right: 1em; */
     display: flex;
     align-items: center;
     justify-content: space-between;
